--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.commons-fileupload2-portlet-2.0.0-M2-test-sources.jar=C:\\Users\\
 file.reference.commons-fileupload2-portlet-2.0.0-M2-tests.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\commons-fileupload2-portlet-2.0.0-M2-tests.jar
 file.reference.commons-fileupload2-portlet-2.0.0-M2.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\commons-fileupload2-portlet-2.0.0-M2.jar
 file.reference.commons-io-2.8.0.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\commons-io-2.8.0.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\Mpho Khama\\Desktop\\gson-2.10.1.jar
 file.reference.jakarta.activation-2.0.1.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.activation-2.0.1__1_.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\jakarta.activation-2.0.1 (1).jar
 file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\jakarta.mail-2.0.1.jar
@@ -57,7 +58,9 @@ file.reference.javax.mail.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JA
 file.reference.javax.servlet-api-4.0.1.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\javax.servlet-api-4.0.1.jar
 file.reference.jbcrypt-0.4.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\jbcrypt-0.4.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\jcalendar-1.4.jar
+file.reference.json-20250517.jar=C:\\Users\\Mpho Khama\\Desktop\\json-20250517.jar
 file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\Mpho Khama\\Desktop\\semester 6\\ADV JAVA\\2230552\\JARS\\mysql-connector-j-9.0.0.jar
+file.reference.stripe-java-25.3.0.jar=C:\\Users\\Mpho Khama\\Desktop\\stripe-java-25.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -98,7 +101,10 @@ javac.classpath=\
     ${file.reference.javax.servlet-api-4.0.1.jar}:\
     ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.json-20250517.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.stripe-java-25.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview --enable-preview
 javac.debug=true
